Native Linux harness, driving frame-time plan, and baseline results
- Harness: Steam wrapper launch, MangoHud configs, sysmon, dashboard,
  section attribution, native-Linux baselines (stock/Zink, driving)
- pzopt: AutoStart, config/flag handling, overrides and stats updates
- Docs: native baseline 2026-09-18, driving frame-time plan, benchmark
  progress dashboard, results and override-edit notes
- Ignore Claude worktrees and Python bytecode

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>